objects/npsp__Error__c.object
<CustomObject>
    <description>Contains errors generated from the NPSP package during normal operations.</description>
    <fields>
        <fullName>npsp__Context_Type__c</fullName>
        <description>Context that generated the error, if known.</description>
        <inlineHelpText>Context that generated the error, if known.</inlineHelpText>
        <label>Context Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Datetime__c</fullName>
        <defaultValue>now()</defaultValue>
        <description>Date &amp; time the error occurred</description>
        <inlineHelpText>Date &amp; time the error occurred</inlineHelpText>
        <label>Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>npsp__Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether an email notification has been sent regarding this error.</description>
        <inlineHelpText>Indicates whether an email notification has been sent regarding this error.</inlineHelpText>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Error_Type__c</fullName>
        <description>Type of error that occurred</description>
        <inlineHelpText>Type of error that occurred</inlineHelpText>
        <label>Error Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Full_Message__c</fullName>
        <description>Full text of the error message</description>
        <inlineHelpText>Full text of the error message</inlineHelpText>
        <label>Full Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Object_Type__c</fullName>
        <description>Type of object on which the error occurred, if known.</description>
        <inlineHelpText>Type of object on which the error occurred, if known.</inlineHelpText>
        <label>Object Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>npsp__Posted_in_Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the error has been posted in Chatter.</description>
        <inlineHelpText>Indicates whether the error has been posted in Chatter.</inlineHelpText>
        <label>Posted in Chatter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Record_URL__c</fullName>
        <description>A link to the record which caused the error, if available.</description>
        <inlineHelpText>A link to the record which caused the error, if available.</inlineHelpText>
        <label>Record URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>npsp__Related_Record_ID__c</fullName>
        <description>The Salesforce ID of the record associated with this error.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Salesforce ID of the record associated with this error.</inlineHelpText>
        <label>Related Record ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>npsp__Retry_Pending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When selected, indicates that the record specified in Related Record ID will be reprocessed in the next scheduled process. If reprocessing succeeds, this field is then deselected. Applies to specific types of errors that occur during GEM scheduled processes.</description>
        <inlineHelpText>When selected, indicates that the record specified in Related Record ID will be reprocessed in the next scheduled process. If reprocessing succeeds, this field is then deselected. Applies to specific types of errors that occur during scheduled processes.</inlineHelpText>
        <label>Retry Pending?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>npsp__Stack_Trace__c</fullName>
        <description>Stack trace for the thrown error, if available at runtime.</description>
        <inlineHelpText>Stack trace for the thrown error, if available at runtime.</inlineHelpText>
        <label>Stack Trace</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Error</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Error Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>